# terminal-velocity-rl-algo

./: .gitattributes  .gitignore  README.md  game-configs.json
bots/probe/: algo_strategy.py
bots/torture/: algo_strategy.py
deploy/: algo_strategy.py  fallback.py  npforward.py
replays/: ladder-15330187.replay  ladder-replay2.replay  p1-14-07-2026-23-29-16-1784096956917--1874303832.replay  p1-15-07-2026-08-57-56-1784131076924--1069499272.replay  p1-15-07-2026-08-58-10-1784131090388--926435264.replay  p1-15-07-2026-09-16-44-1784132204397-1566995902.replay  p1-15-07-2026-14-08-18-1784149698876-1880091448.replay
replays/scraped/: diff_results.tsv  manifest.tsv
scripts/: arena.py  batch_diff.sh  gen_nn_fixtures.py  replay_utils.py  scrape_replays.py  sync_replays_to_pod.sh
sim/: Cargo.toml  MECHANICS.md  terminal_sim.pyd
sim/src/: config.rs  engine.rs  geo.rs  lib.rs  main.rs  nn.rs  path.rs  py.rs  replay.rs  state.rs
sim/tests/: nn_parity.rs
sparring/: _shared.py
sparring/alpha_strike/: algo_strategy.py
sparring/corner_gun/: algo_strategy.py
sparring/demolisher_line/: algo_strategy.py
sparring/interceptor_wall/: algo_strategy.py
sparring/punching_bag/: algo_strategy.py
sparring/scout_rush/: algo_strategy.py
sparring/shielded_push/: algo_strategy.py
sparring/starter/: algo_strategy.py
train/: ARCHITECTURE.md  COMPUTE.md  GPU_SETUP.md  actor.py  config.yaml  evaluate.py  export.py  features.py  infer_server.py  league.py  learner.py  model.py  replays.py  run.py  scripted.py  search.py  setup_runpod.sh  tokens.py
(+7 files in other folders)
